--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "echo 'Ran build successfully'"
   },
   "dependencies": {
     "jest": "^26.1.0"
